2003-12-19  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_iter_children):
	Allow parent to be None. Patch by Benjamin CAMA, fixes #124593

	* gtk/gtk.defs: Allow all GdkColor arguments for
	gtk_widget_modify_* to be null. Patch by jkluebs@luebsphoto.com,
	fixes #127178
	(GtkTreeView.expand_row): Set return value to gboolean. Patch by
	Doug Quale, fixes #126406

2003-12-18  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.defs (set_tip): Allow null for tip_text. Patch by John
	Ehresman, fixes #128623.

	* gtk/pygtktreemodel.c: handle None iterator values. Patch by John
	Ehresman, fixes #126479.

2003-12-05  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (pygtk_tree_selection_foreach_marshal):
	Increase the ref count on Py_None (#128448, Vsevolod Fedorov)

	* gtk/gtk-types.c (pygtk_tree_model_row_get_parent): Swap parent
	and child argument. (#123605, patch by Steve Chaplin)

2003-10-23  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_item_factory_create_items): Use
	GdkPixbuf objects instead of raw strings, Thanks to Rob Melby for
	the patch, #123456

	* gtk/gtkwidget.override (_wrap_gtk_widget_size_request): pass
	back the values instead of pointers to them. Thanks to Rob Melby
	for the patch, #125272

2003-09-02  James Henstridge  <james@daa.com.au>

	* ChangeLog.pre-2-0: rename old change log.
