@@ -1,5 +1,9 @@
 2003-12-19  Johan Dahlin  <johan@gnome.org>
 
+	* gtk/pygtkcellrenderer.c
+	(pygtk_generic_cell_renderer_start_editing): Allow return values
+	that are NULL. Patch by Tim Evans, fixes #122786
+
 	* gtk/gtktreeview.override (_wrap_gtk_tree_model_iter_children):
 	Allow parent to be None. Patch by Benjamin CAMA, fixes #124593
 
